--- a/mgine2d.vcxproj.filters
+++ b/mgine2d.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClCompile Include="src\SolidTile.cpp">
       <Filter>Pliki źródłowe\Entities\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="src\CollisionManager.cpp">
-      <Filter>Pliki źródłowe\Systems\Physics</Filter>
-    </ClCompile>
     <ClCompile Include="src\Player.cpp">
       <Filter>Pliki źródłowe\Entities\Player</Filter>
     </ClCompile>
@@ -116,6 +113,9 @@
     </ClCompile>
     <ClCompile Include="src\MovingBlock.cpp">
       <Filter>Pliki źródłowe\Entities\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Collidable.cpp">
+      <Filter>Pliki źródłowe\Systems\Physics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
