--- a/mgine2d.vcxproj
+++ b/mgine2d.vcxproj
@@ -154,6 +154,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\AnimatedDecor.cpp" />
+    <ClCompile Include="src\ContactListener.cpp" />
     <ClCompile Include="src\Door.cpp" />
     <ClCompile Include="src\Elevator.cpp" />
     <ClCompile Include="src\ElevatorCallSwitch.cpp" />
@@ -173,10 +174,10 @@
     <ClCompile Include="src\WoodCrate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ContactListener.h" />
     <ClInclude Include="src\FireAxe.h" />
     <ClInclude Include="src\InfectedHazmat.h" />
     <ClInclude Include="src\Platform.h" />
-    <ClInclude Include="src\Ramp.h" />
     <ClInclude Include="src\MovingBlock.h" />
     <ClInclude Include="src\Collidable.h" />
     <ClInclude Include="src\ElevatorCallSwitch.h" />
