--- a/mgine2d.vcxproj
+++ b/mgine2d.vcxproj
@@ -153,8 +153,10 @@
     <ProjectReference />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\BioBomb.cpp" />
     <ClCompile Include="src\AnimatedDecor.cpp" />
     <ClCompile Include="src\ContactListener.cpp" />
+    <ClCompile Include="src\Dialogue.cpp" />
     <ClCompile Include="src\Door.cpp" />
     <ClCompile Include="src\Elevator.cpp" />
     <ClCompile Include="src\ElevatorCallSwitch.cpp" />
@@ -169,6 +171,7 @@
     <ClCompile Include="src\LevelPortal.cpp" />
     <ClCompile Include="src\LightManager.cpp" />
     <ClCompile Include="src\MovingBlock.cpp" />
+    <ClCompile Include="src\NPCSecurityGuy.cpp" />
     <ClCompile Include="src\Platform.cpp" />
     <ClCompile Include="src\Ribbs.cpp" />
     <ClCompile Include="src\SolidTile.cpp" />
@@ -182,6 +185,9 @@
     <ClCompile Include="src\WoodCrate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\NPCSecurityGuy.h" />
+    <ClInclude Include="src\Dialogue.h" />
+    <ClInclude Include="src\BioBomb.h" />
     <ClInclude Include="src\HeadSpit.h" />
     <ClInclude Include="src\Football.h" />
     <ClInclude Include="src\Leggy.h" />
