adding particle and destruction into shards

--- a/mgine2d.vcxproj
+++ b/mgine2d.vcxproj
@@ -153,6 +153,7 @@
     <ProjectReference />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Particles.cpp" />
     <ClCompile Include="src\BioBomb.cpp" />
     <ClCompile Include="src\AnimatedDecor.cpp" />
     <ClCompile Include="src\ContactListener.cpp" />
@@ -175,6 +176,7 @@
     <ClCompile Include="src\NPCSecurityGuy2.cpp" />
     <ClCompile Include="src\Platform.cpp" />
     <ClCompile Include="src\Ribbs.cpp" />
+    <ClCompile Include="src\Shard.cpp" />
     <ClCompile Include="src\SolidTile.cpp" />
     <ClCompile Include="src\Animations.cpp" />
     <ClCompile Include="src\Game.cpp" />
@@ -186,6 +188,8 @@
     <ClCompile Include="src\WoodCrate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Particles.h" />
+    <ClInclude Include="src\Shard.h" />
     <ClInclude Include="src\NPCSecurityGuy2.h" />
     <ClInclude Include="src\NPCSecurityGuy.h" />
     <ClInclude Include="src\Dialogue.h" />
