Added different solid collider for floor

--- a/mgine2d.vcxproj
+++ b/mgine2d.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="src\NPCSecurityGuy2.cpp" />
     <ClCompile Include="src\Platform.cpp" />
     <ClCompile Include="src\Ribbs.cpp" />
+    <ClCompile Include="src\Shaders.cpp" />
     <ClCompile Include="src\Shard.cpp" />
     <ClCompile Include="src\SolidTile.cpp" />
     <ClCompile Include="src\Animations.cpp" />
@@ -188,6 +189,7 @@
     <ClCompile Include="src\WoodCrate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Shaders.h" />
     <ClInclude Include="src\Particles.h" />
     <ClInclude Include="src\Shard.h" />
     <ClInclude Include="src\NPCSecurityGuy2.h" />
